# pico-w-rs

./: Cargo.toml  README.md
.cargo/: config.toml
ap/: Cargo.toml
ap/src/: main.rs
blink/: Cargo.toml  build.rs
blink/src/: main.rs
