[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ellipse-0806"]
repository = "https://github.com/Ellipse-0806/pico-w-blink.git"

[workspace]
resolver = "2"
members = ["blink"]

[workspace.dependencies]
# hal
hal = { version = "1.0.0", package = "embedded-hal" }
hal-async = { version = "1.0.0", package = "embedded-hal-async" }

# embassy
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }

# cyw43
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }

# cortex
cortex-m = { version = "0.7.7" }
cortex-m-rt = { version = "0.7.3" }

# futures
futures = { version = "0.3.30", default-features = false }

static_cell = { version = "2.0.0" }
portable-atomic = { version = "1.6.0" }

# defmt
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }

panic-probe = { version = "0.3.1" }

[profile.release]
debug = 2
